--- a/config/database.yml
+++ b/config/database.yml
@@ -7,17 +7,11 @@ development:
   port: 1433
   azure: true
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-# test:
-#   adapter: sqlite3
-#   database: db/test.sqlite3
-#   pool: 5
-#   timeout: 5000
-
-# production:
-#   adapter: sqlite3
-#   database: db/production.sqlite3
-#   pool: 5
-#   timeout: 5000
+production:
+  adapter: sqlserver
+  dataserver: iaxjlkc5ea.database.windows.net
+  database: unite4good-api-db
+  username: guestreadonly@iaxjlkc5ea
+  password: aCCe$$247
+  port: 1433
+  azure: true
